# PersonalChatbot

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: main.py
backend/: TESTING.md  requirements.txt  test_api_integration.py  test_relevance_filter.py
backend/app/: main.py
backend/app/chat/: llm.py  prompting.py  routes.py  schema.py
backend/app/core/: kb.py
backend/index/: chunks.json  inverted_index.json
backend/rag/: chunking.py  chunking.py.md  llm.py  pdf_extract.py  retrieval.py  synthesis.py
backend/scripts/: build_index.py  ingest_resume.py  query_index.py  test_prompts_offline.py
backend/tests/: test_chat_edge_cases.py  test_chat_prompting.py  test_chat_routes.py  test_chunking_invariants.py  test_prompt_optimization.py  test_resume_chunking.py  test_retrieval.py
chatbot/: main.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AnswerDisplay.tsx  ChatContainer.tsx  ChatInput.tsx  CitationsList.tsx  ErrorDisplay.tsx  EvidenceList.tsx  LoadingState.tsx  MessageBubble.tsx  MessageList.tsx  QueryInput.tsx  TypingIndicator.tsx  index.ts
frontend/src/components/chat/: ChatBubble.tsx  ChatContainer.tsx  ChatHeader.tsx  ChatInput.tsx  MarkdownRenderer.tsx  TypingIndicator.tsx
frontend/src/hooks/: useAutoScroll.ts  useTypewriter.ts
frontend/src/lib/: chatApi.ts
frontend/src/pages/: Index.tsx
frontend/src/types/: api.ts  chat.ts
scripts/: ingest.py
(+6 files in other folders)
