[project]
name = "personal-chatbot"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "pypdf>=3.0.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "pytest>=7.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
app = "backend.app.main:app"

